--- a/packages/chaintypes/package.json
+++ b/packages/chaintypes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@delightfuldot/chaintypes",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Types for substrate-based chains",
   "author": "Thang X. Vu <thang@coongcrafts.io>",
   "main": "src/index.ts",
