--- a/packages/codecs/package.json
+++ b/packages/codecs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@delightfuldot/codecs",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "> TODO",
   "author": "Thang X. Vu <thang@coongcrafts.io>",
   "main": "src/index.ts",
