--- a/packages/specs/package.json
+++ b/packages/specs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@delightfuldot/specs",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Known specs for rpc, runtime calls",
   "author": "Thang X. Vu <thang@coongcrafts.io>",
   "main": "src/index.ts",
