--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,6 +7,7 @@
     "djs": "./bin/dedot"
   },
   "main": "src/index.ts",
+  "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.build.cjs.json && cp -R ./bin ./dist",
