--- a/packages/shape/package.json
+++ b/packages/shape/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/dedotdev/dedot.git"
   },
   "main": "src/index.ts",
-  "sideEffects": false,
+  "sideEffects": true,
   "type": "module",
   "dependencies": {
     "@dedot/utils": "workspace:*",
