--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,8 +22,9 @@
     "directory": "dist"
   },
   "dependencies": {
+    "@noble/hashes": "^1.3.3",
     "@polkadot/util": "^12.6.2",
-    "@polkadot/util-crypto": "^12.6.2"
+    "@scure/base": "^1.1.5"
   },
   "license": "Apache-2.0"
 }
