fix: import-related warnings

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../chaintypes/tsconfig.json",
     },
     {
+      "path": "../specs/tsconfig.json",
+    },
+    {
       "path": "../storage/tsconfig.json",
     },
   ],
