--- a/packages/specs/tsconfig.build.cjs.json
+++ b/packages/specs/tsconfig.build.cjs.json
@@ -8,6 +8,9 @@
   "references": [
     {
       "path": "../types/tsconfig.json"
+    },
+    {
+      "path": "../codecs/tsconfig.json"
     }
   ]
 }
