--- a/packages/specs/tsconfig.build.json
+++ b/packages/specs/tsconfig.build.json
@@ -4,6 +4,9 @@
   "references": [
     {
       "path": "../types/tsconfig.json"
+    },
+    {
+      "path": "../codecs/tsconfig.json"
     }
   ]
 }
