--- a/packages/specs/tsconfig.json
+++ b/packages/specs/tsconfig.json
@@ -4,12 +4,15 @@
     "baseUrl": "./",
     "outDir": "dist",
     "rootDir": "src",
-    "declarationDir": "dist"
+    "declarationDir": "dist",
   },
   "include": ["src/**/*"],
   "references": [
     {
-      "path": "../types/tsconfig.json"
-    }
-  ]
+      "path": "../types/tsconfig.json",
+    },
+    {
+      "path": "../codecs/tsconfig.json",
+    },
+  ],
 }
