feat(api): CodecRegistry -> PortableRegistry #47

--- a/packages/codecs/package.json
+++ b/packages/codecs/package.json
@@ -11,6 +11,7 @@
   },
   "main": "src/index.ts",
   "type": "module",
+  "sideEffects": false,
   "dependencies": {
     "@dedot/shape": "workspace:*",
     "@dedot/utils": "workspace:*",
