--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -33,6 +33,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/keyring": "^12.6.2",
-    "@polkadot/types": "^10.11.2"
+    "@polkadot/types": "^10.11.2",
+    "smoldot": "^2.0.24"
   }
 }
